create list of reseller order comissions and tested. Changed swagger docs to show formData fields instead a json at swagger-ui
