# api/controllers/repositories/order-comission-repository.js
@@ -1,6 +1,6 @@
-const { Op } = require('sequelize');
 const { ResellerOrderComissions } = require('../../../db/models');
 const logger = require('../../config/logger');
+const { buildPagination } = require('../../helpers/pagination-helpers');
 
 const createOrderComission = async ({ total_shopping_amount, reseller_id, shopping_code }) => {
   try {
@@ -22,9 +22,14 @@ const createOrderComission = async ({ total_shopping_amount, reseller_id, shoppi
   }
 };
 
-const listOrderComissions = async ({ reseller_id }) => {
+const listOrderComissions = async ({ reseller_id, pagination }) => {
   try {
+    let { rowsPerPage = 5, currentPage = 0 } = pagination;
+    rowsPerPage = parseInt(rowsPerPage, 10);
+    currentPage = parseInt(currentPage, 10);
     const resellerOrderComissionList = await ResellerOrderComissions.findAndCountAll({
+      limit: rowsPerPage,
+      offset: rowsPerPage * currentPage,
       where: {
         reseller_id,
       },
@@ -36,7 +41,11 @@ const listOrderComissions = async ({ reseller_id }) => {
         resellerOrderComissionList,
       },
     });
-    return resellerOrderComissionList;
+    const paginationParams = buildPagination({ rowsPerPage, currentPage, totalValues: resellerOrderComissionList.count });
+    return {
+      reseller_order_comissions: resellerOrderComissionList.rows,
+      pagination: paginationParams,
+    };
   } catch (error) {
     logger.systemLogLevel({ error, meta: { function: 'listOrderComissions' }, level: 'error' });
     throw error;
