# public/swagger.json
@@ -90,6 +90,17 @@ paths:
       operationId: "listOrderComission"
       produces:
       - "application/json"
+      parameters:
+        - name: rowsPerPage
+          in: query
+          required: false
+          type: number
+          description: "Total of elements per a page"
+        - name: currentPage
+          in: query
+          required: false
+          type: number
+          description: "Current page."
       responses:
         200:
           description: "successful operation"
@@ -108,12 +119,35 @@ paths:
       produces:
       - "application/json"
       parameters:
-      - in: "body"
-        name: "body"
-        description: "Created reseller object"
-        required: true
-        schema:
-          $ref: "#/definitions/ResellerInput"
+        - name: first_name
+          in: formData
+          required: true
+          type: string
+          description: "Reseller first name"
+        - name: last_name
+          in: formData
+          required: true
+          type: string
+          description: "Reseller last name"
+        - name: cpf
+          in: formData
+          required: true
+          type: string
+          minValue: 11
+          maxValue: 14
+          description: "Reseller CPF"
+        - name: email
+          in: formData
+          required: true
+          type: string
+          format: email
+          description: "Reseller email. It will be used as login."
+        - name: password
+          in: formData
+          required: true
+          type: string
+          format: password
+          description: "Reseller account password."
       responses:
         200:
           description: "successful operation"
@@ -136,6 +170,23 @@ paths:
           description: "successful operation"
           schema:
             $ref: "#/definitions/ResellerModel"
+        400:
+          description: "Bad Request"
+  /v1/resellers/accumulated-cashback:
+    get:
+      tags:
+      - "Resellers"
+      security:
+      - auth: []
+      summary: "Get an accumulated cashback"
+      operationId: "getResellerAccumulatedCashback"
+      produces:
+      - "application/json"
+      responses:
+        200:
+          description: "successful operation"
+          schema:
+            $ref: "#/definitions/ResellerAccumulatedCashback"
         400:
           description: "Bad Request"
 definitions:  
@@ -226,19 +277,8 @@ definitions:
       deleted_at:
         type: "string"
     type: object
-  ResellerInput:
+  ResellerAccumulatedCashback:
     properties:
-      first_name:
-        type: "string"
-      last_name:
-        type: "string"
-      cpf:
-        type: "string"
-        minValue: 11
-        maxValue: 14
-      email:
-        type: "string"
-        format: email
-      password:
-        type: "string"
+      credit:
+        type: "number"
     type: object
